# SPECTRUM

./: .gitignore  CITATION.cff  Makefile.am  README.md  background_base.hh  background_cartesian.cc  background_cylindrical_obstacle.hh  background_dipole.hh  background_shock.cc  background_shock.hh  background_solarwind.cc  background_uniform.cc  block_base.hh  block_batl.hh  block_cartesian.cc  block_cartesian.hh  boundary_base.hh  boundary_momentum.cc  boundary_momentum.hh  cache_lru.hh  config.parameters.py  config.physical.py  config.py  config_impl.py  configupdate.sh  configure.ac  configure.scan  data_container.cc  data_container.hh  definitions.cc  diffusion_base.hh  diffusion_other.cc  diffusion_other.hh  distribution_base.cc  distribution_other.hh  domain_partition.hh  gpu_config.hh  initial_momentum.cc  initial_momentum.hh  initial_space.cc  (+28 more)
benchmarks/: Makefile.am  benchmark_explained.txt  benchmark_results.txt  main_generate_cartesian_parker_spiral.cc  main_generate_cartesian_solarwind_background.cc  main_postprocess_diff_shock_acc.cc  main_postprocess_diffusive_shock_acceleration.cc  main_postprocess_modulation_cartesian_parker.cc  main_test_cartesian_parker_spiral.cc  main_test_diff_shock_acc.cc  main_test_diffusive_shock_acceleration.cc  main_test_dipole_periods.cc  main_test_dipole_periods.config.hh  main_test_dipole_periods.hh  main_test_dipole_periods.hyperconfig.hh  main_test_dipole_visual.cc  main_test_dipole_visualization.cc  main_test_dipole_visualization.config.hh  main_test_dipole_visualization.hyperconfig.hh  main_test_full_diff.cc  main_test_full_diff.hyperconfig.hh  main_test_init_cond_records.cc  main_test_init_cond_records.config.hh  main_test_init_cond_records.hyperconfig.hh  main_test_modulation_cartesian_parker.cc  main_test_modulation_cartesian_parker.hyperconfig.hh  main_test_pa_distro_isotrop.cc  main_test_pa_distro_isotrop.config.hh  main_test_pa_distro_isotrop.hyperconfig.hh  main_test_pa_scatt.cc  main_test_pa_scatt.hyperconfig.hh  main_test_parker_spiral.cc  main_test_parker_spiral.config.hh  main_test_parker_spiral.hyperconfig.hh  main_test_perp_diff.cc  main_test_perp_diff.config.hh  main_test_perp_diff.hyperconfig.hh  main_test_solarwind_parker_spiral.cc  main_test_turb_waves.cc  main_test_turb_waves.hyperconfig.hh  (+1 more)
benchmarks/plotting_scripts/: plot_test_diff_shock_acc.py  plot_test_dipole_periods.py  plot_test_dipole_visual.py  plot_test_full_diff.py  plot_test_init_cond_records.py  plot_test_modulation_cartesian_parker.py  plot_test_pa_distro_isotrop.py  plot_test_pa_scatt.py  plot_test_parker_spiral.py  plot_test_perp_diff.py  plot_test_turb_waves.py
benchmarks_fields/: Makefile  benchmark_explained.txt  benchmarks_fields_README.txt  main_postprocess_modulation_cartesian_parker.cc  main_test_dipole_periods.cc  main_test_turb_waves.cc  run_tests.sh
cmake/: definitions.cmake  spectrum.cmake
common/: arithmetic.hh  communication_site.hh  compiletime_lists.hh  compiletime_math.hh  complex_vectors.hh  coordinates.hh  data_container.cc  data_container.hh  definitions.cc  definitions.hh  derivativedata.hh  device_vector.cc  device_vector.hh  exchange_site.hh  extremadata.hh  fields.hh  gpu_config.hh  math_extra.hh  matrix.cc  matrix.hh  mpi_config.cc  mpi_config.hh  multi_index.cc  multi_index.hh  params.cc  params.hh  physical_constants.hh  physics.cc  physics.hh  polynomial.cc  polynomial.hh  print_warn.hh  random.hh  rk_config.hh  rk_lists.hh  shared_site.hh  simple_array.hh  spatial_data.hh  specie.hh  status.hh  (+6 more)
config-spectrum/: README.md  pyproject.toml
config-spectrum/_F/: LICENSE
config-spectrum/config_spectrum/: __init__.py  config_parameters.py  config_physical.py  main.py
config-spectrum/config_spectrum/_impl/: configdata.py  helpers.py  parameterinfo.py
fluid/: conservation_laws_gasdyn.cc  conservation_laws_gasdyn.hh  conservation_laws_mhd.cc  conservation_laws_mhd.hh  conservation_laws_passive.cc  conservation_laws_passive.hh  conservation_laws_zank6eq.hh  fluid_fields.hh  fluid_specie.hh  model_fields.hh  riemann_solver.cc  riemann_solver.hh  riemann_solver_config.hh  variables.hh
geodesic/: buffered_block.cc  buffered_block.hh  domain_partition.cc  domain_partition.hh  drawable_sector.cc  drawable_sector.hh  drawable_tesselation.cc  drawable_tesselation.hh  geodesic_sector.cc  geodesic_sector.hh  grid_block.cc  grid_block.hh  neighbors.hh  polygonal_addressing.hh  polyhedron.hh  requestable_tesselation.cc  requestable_tesselation.hh  spherical_slab.hh  spherical_tesselation.cc  spherical_tesselation.hh  stenciled_block.cc  stenciled_block.hh  traversable_tesselation.cc  traversable_tesselation.hh
geometry/: coordinates.hh  distance_map.cc  distance_map.hh  mapped_edge.hh  mapped_element.hh  mapped_face.hh  mapped_vertex.hh  polyhedron.hh  quadrature.hh
runs/: Makefile.am  back_smooth_shock.cc  gcr_modulation_example.cc  postprocess_gcr_modulation_results.cc  smooth_shock.cc
src/: background.config.default.hh  background.config.hh  background.hh  background_base.cc  background_base.hh  background_base_visual.cc  background_batl.cc  background_batl.hh  background_cartesian.cc  background_cartesian.hh  background_cylindrical_obstacle.cc  background_cylindrical_obstacle.hh  background_data_base.cc  background_data_base.hh  background_data_base__old.cc  background_data_base__old.hh  background_data_batl.cc  background_data_batl.hh  background_data_cartesian.cc  background_data_cartesian.hh  background_dipole.cc  background_dipole.hh  background_discontinuity.cc  background_discontinuity.hh  (+141 more)
tests/: Makefile.am  main_onegridblock.cc  main_onestenciledblock.cc  main_tesstest.cc  main_test_background_bochum.cc  main_test_buffered_block.cc  main_test_data_container.cc  main_test_domain_partition.cc  main_test_drawable_sector.cc  main_test_drawable_tesselation.cc  main_test_exchange_site.cc  main_test_fields.cc  main_test_geodesic_sector.cc  main_test_grid_block.cc  main_test_mpi_config.cc  main_test_physics.cc  main_test_polygonal_addressing.cc  main_test_shared_site.cc  main_write_zone_centers.cc
(+35 files in other folders)
